<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentSpring">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="bottom"
        android:id="@+id/fragment_container_spring">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/show_location_result"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_location"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:id="@+id/type"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="@color/purple_700"/>

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/result_type"
                        android:background="@drawable/card_rounded"
                        android:text="@string/spring_light_type"
                        android:paddingVertical="3dp"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/purple_700"
                        android:layout_marginStart="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/light_range"
                        android:id="@+id/range_light"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="@color/purple_700"/>

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/result_light_range"
                        android:background="@drawable/card_rounded"
                        android:text="@string/range_spring"
                        android:paddingVertical="3dp"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/purple_700"
                        android:layout_marginStart="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        android:id="@+id/desc"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="@color/purple_700"/>

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/result_desc"
                        android:background="@drawable/card_rounded"
                        android:text="@string/desc_spring"
                        android:paddingVertical="3dp"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/purple_700"
                        android:layout_marginStart="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/example"
                        android:id="@+id/example"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dot"
                        android:textColor="@color/purple_700"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginEnd="15dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/africa_violet"
                            android:id="@+id/image_spring_1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/purple_700"
                            android:layout_marginTop="10dp"
                            android:text="@string/spring_1"
                            android:id="@+id/name_spring_1"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginEnd="15dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/lili_paris"
                            android:id="@+id/image_spring_2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/purple_700"
                            android:layout_marginTop="10dp"
                            android:text="@string/spring_2"
                            android:id="@+id/name_spring_2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginEnd="15dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/keladi_hias"
                            android:id="@+id/image_spring_3"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/purple_700"
                            android:layout_marginTop="10dp"
                            android:text="@string/spring_3"
                            android:id="@+id/name_spring_3"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>