<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Semester4uts.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Semester4uts.AppWidgetContainer"
    android:padding="20dp"
    android:background="@drawable/card_rounded2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/plant"
                android:background="@drawable/card_circle"
                android:padding="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_900"
                android:text="@string/app_name"
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/types_of_plants"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:id="@+id/thePlant"
            android:layout_gravity="center"
>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/palem_kuning"
                android:background="@drawable/card_circle"
                android:padding="6dp"
                android:layout_marginEnd="10dp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/africa_violet"
                android:background="@drawable/card_circle"
                android:padding="6dp"
                android:layout_marginEnd="10dp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pakis_kriting"
                android:background="@drawable/card_circle"
                android:padding="6dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/goo"
            android:text="@string/go"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/card_rounded3"/>

    </LinearLayout>


</RelativeLayout>